# datagen

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  gitlabci.mk  main.py  pyproject.toml
.claude/: settings.local.json
assets/: styles.css
ci/: deploy.yml  lint.yml  scan.yml  test.yml
docs/: CNAME  README.md  _navbar.md  architecture.md  cicd.md  dev.md  index.html
docs/docs/: _navbar.md  _sidebar.md  development.md  index.html
docs/static/js/: chatbot.js
src/: constants.py  datagen.py  models.py  pipeline.py  prompts.py  ui.py  utils.py
tests/: test_datagen.py  test_models.py  test_pipeline.py  test_prompts.py  test_ui.py  test_utils.py
